--- a/lib/server/views/queue.pug
+++ b/lib/server/views/queue.pug
@@ -4,7 +4,7 @@ block content
   h1= title
   h2 Today's song queue
   p
-    | To add a new song to the queue use the #[code !sr [youtube link]]' 
+    | To add a new song to the queue use the #[code !sr [youtube link]] 
     | command in chat.
   ul
     each val in [1, 2, 3, 4, 5]
