Pass bot state to routers

--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -3,3 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p
+    | You can find the current song queue in 
+    a(href='/queue') queue
+    | .
+  p Maintained with ♥ by febog.
