Add queue array to bot state

--- a/lib/server/views/queue.pug
+++ b/lib/server/views/queue.pug
@@ -6,5 +6,5 @@ block content
     | To add a new song to the queue use the #[code !sr [youtube link]] 
     | command in chat.
   ul
-    each val in [1, 2, 3, 4, 5]
+    each val in queue
       li= val
