--- a/lib/server/views/layout.pug
+++ b/lib/server/views/layout.pug
@@ -5,3 +5,4 @@ html
     link(rel='stylesheet', href='https://botshuassets.blob.core.windows.net/botshu-assets/sakura-vader.css')
   body
     block content
+    p BotShu maintained with ♥ by febog.
