--- a/lib/server/views/queue.pug
+++ b/lib/server/views/queue.pug
@@ -3,8 +3,11 @@ extends layout
 block content
   h1 Today's song queue
   p
-    | To add a new song to the queue use the #[code !sr [youtube link]] 
+    | To add a new song to the queue use the #[code !sr (youtube link)] 
     | command in chat.
   ul
-    each val in queue
-      li= val
+    each song in queue
+      li
+        b= song.name
+        |  requested by 
+        b= song.requestor
