Add stream status to homepage

--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -7,3 +7,4 @@ block content
     | You can find the current song queue in 
     a(href='/queue') queue
     | .
+  p Stream is currently #{streamStatus}.
