--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -7,4 +7,6 @@ block content
     | You can find the current song queue in 
     a(href='/queue') queue
     | .
-  p Stream is currently #{streamStatus}.
+  p Stream is currently 
+    b #{store.isStreamLive() ? "Live" : "Offline"}
+    | .
