--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Welcome to #{title}
   p
     | You can find the current song queue in 
     a(href='/queue') queue
