Add queue length

--- a/lib/server/views/queue.pug
+++ b/lib/server/views/queue.pug
@@ -5,6 +5,7 @@ block content
   p
     | To add a new song to the queue use the #[code !sr (youtube link)] 
     | command in chat.
+  p A total of #{queue.length} songs have been queued this stream.
   ol
     each song in queue
       li
