Add basic breadcrumbs

--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -3,6 +3,8 @@ extends layout
 block content
   h1 Welcome to #{title}
   p
+    a(href='/') Home
+  p
     | You can find the current song queue in 
     a(href='/queue') queue
     | .
