--- a/lib/server/views/layout.pug
+++ b/lib/server/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
     link(rel='stylesheet', href='https://botshuassets.blob.core.windows.net/botshu-assets/sakura-vader.css')
