--- a/lib/server/views/layout.pug
+++ b/lib/server/views/layout.pug
@@ -1,6 +1,8 @@
 doctype html
 html(lang='en')
   head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
     link(rel='stylesheet', href='https://botshuassets.blob.core.windows.net/botshu-assets/sakura-vader.css')
   body
