Pass botshu instance to webserver setup

--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -9,5 +9,5 @@ block content
     a(href='/queue') queue
     | .
   p Stream is currently 
-    b #{store.isStreamLive() ? "Live" : "Offline"}
+    b #{isStreamLive ? "Live" : "Offline"}
     | .
