--- a/lib/server/views/index.pug
+++ b/lib/server/views/index.pug
@@ -1,7 +1,10 @@
 extends layout
 
 block content
-  h1 Welcome to #{title}
+  h1 BotShu
+  p
+    em
+      | Stream tooling for Mushu.
   p
     a(href='/') Home
   p
@@ -11,3 +14,5 @@ block content
   p Stream is currently 
     b #{isStreamLive ? "Live" : "Offline"}
     | .
+  p
+    | Running #{title}
